; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-process-util.c_test_ioprio_class_from_to_string.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-process-util.c_test_ioprio_class_from_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"none\00", align 1
@IOPRIO_CLASS_NONE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"realtime\00", align 1
@IOPRIO_CLASS_RT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [12 x i8] c"best-effort\00", align 1
@IOPRIO_CLASS_BE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [5 x i8] c"idle\00", align 1
@IOPRIO_CLASS_IDLE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [2 x i8] c"0\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"7\00", align 1
@.str.7 = private unnamed_addr constant [2 x i8] c"8\00", align 1
@.str.8 = private unnamed_addr constant [2 x i8] c"9\00", align 1
@.str.9 = private unnamed_addr constant [3 x i8] c"-1\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_ioprio_class_from_to_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_ioprio_class_from_to_string() #0 {
  %1 = load i32, i32* @IOPRIO_CLASS_NONE, align 4
  %2 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %1)
  %3 = load i32, i32* @IOPRIO_CLASS_RT, align 4
  %4 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %3)
  %5 = load i32, i32* @IOPRIO_CLASS_BE, align 4
  %6 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* @IOPRIO_CLASS_IDLE, align 4
  %8 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i32 %7)
  %9 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0), i32 0)
  %10 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0), i32 1)
  %11 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i64 0, i64 0), i32 7)
  %12 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.7, i64 0, i64 0), i32 8)
  %13 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.8, i64 0, i64 0), i32 -1)
  %14 = call i32 @test_ioprio_class_from_to_string_one(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.9, i64 0, i64 0), i32 -1)
  ret void
}

declare dso_local i32 @test_ioprio_class_from_to_string_one(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
